--- a/uni.scss
+++ b/uni.scss
@@ -13,7 +13,11 @@
  */
 
 /* 颜色变量 */
+$cw-base-color:#FF2121;
+$cw-base-color-deep:#e51c1c;
 
+/*背景灰色*/
+$cw-background-grey:#f0eff3;
 /* 行为相关颜色 */
 $uni-color-primary: #007aff;
 $uni-color-success: #4cd964;
