--- a/uni.scss
+++ b/uni.scss
@@ -12,12 +12,14 @@
  * 如果你的项目同样使用了scss预处理，你也可以直接在你的 scss 代码中使用如下变量，同时无需 import 这个文件
  */
 
+
+
 /* 颜色变量 */
 $cw-base-color:#FF2121;
 $cw-base-color-deep:#e51c1c;
 
 /*背景灰色*/
-$cw-background-grey:#f0eff3;
+$cw-background-grey:#F4F4F4;
 
 /* 行为相关颜色 */
 $uni-color-primary: #007aff;
@@ -79,3 +81,10 @@ $uni-color-subtitle: #555555; // 二级标题颜色
 $uni-font-size-subtitle:36rpx;
 $uni-color-paragraph: #3F536E; // 文章段落颜色
 $uni-font-size-paragraph:30rpx;
+
+
+
+body{
+	background-color: $cw-background-grey;
+	letter-spacing: 1px;
+}
