--- a/uni.scss
+++ b/uni.scss
@@ -87,4 +87,5 @@ $uni-font-size-paragraph:30rpx;
 body{
 	background-color: $cw-background-grey;
 	letter-spacing: 1px;
+	color: $uni-text-color;
 }
